--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     <!--3rd parth JS librariries-->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./Scripts/objects/person.js"></script>
+    <script src="./Scripts/objects/student.js"></script>
     <script src="./Scripts/app.js"></script>
 
 
